Fixed alignment

--- a/css/entry.css
+++ b/css/entry.css
@@ -1,3 +1,11 @@
 .numbers  {
   color: #f00;
 }
+
+.name{
+	right: auto;
+}
+
+table.products td.price {
+  text-align: right;
+}
